--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-native": "0.63.3",
+    "react-native-web": "0.13.14",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
